user-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: user-database
  name: user-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/my-networks: "true"
        io.kompose.service: user-database
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: Backoffice
            - name: MYSQL_PASSWORD
              value: MainPassword
            - name: MYSQL_ROOT_PASSWORD
              value: RootPassword
            - name: MYSQL_USER
              value: MainUser
          image: claudiojunior/db-users
          imagePullPolicy: IfNotPresent
          name: user-database
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-volume
      restartPolicy: Always
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-volume
status: {}
