user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/my-networks: "true"
        io.kompose.service: user-service
    spec:
      containers:
        - image: claudiojunior/app-users
          imagePullPolicy: IfNotPresent
          name: user-service
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.1"
              memory: 200M
      restartPolicy: Always
status: {}
